# veg2hab

./: .gitattributes  .gitignore  README.md  README_BACKUP.md  architecture.drawio  definitietabel_notes.md  pyproject.toml  release.py  todonotenotes.md
data/: 5. Was-wordt-lijst-vegetatietypen-en-habitattypen-09-02-2021.xlsx  Overzicht_vegetatiekarteringen.xlsx  accesskarteringinfo.xlsx  accesskarteringinfo_new.xlsx  beperkende_criteria.xlsx  definitietabel habitattypen (versie 24 maart 2009)_0.xls  definitietabel_json.csv  dt_cleaned.xlsx  dt_reformatted.xlsx  johannes_shapefilekarteringinfo.xlsx  mitsjson.csv  mitsjson.json  mozaiekjson.csv  mozaiekjson.json  shapefilekarteringinfo.xlsx  validationinfo.xlsx  ww_cleaned.xlsx  ww_reformatted.xlsx  ww_split.xlsx  ~$shapefilekarteringinfo.xlsx
docs/: ADVIES_LEEFGEBIEDEN.md  HANDLEIDING.md  OMZETSTAPPEN.md  VALIDATIE.md
notebooks/: EDA_FGR.ipynb  EDA_koppeling_ww_deftabel.ipynb  EDA_mitsen.ipynb  EDA_mitsen_en_mozaieken.ipynb  EDA_opschonen_deftabel.ipynb  EDA_opschonen_waswordt.ipynb  EDA_rVvN_wwl.ipynb  EDA_waswordt.ipynb  FGR_dev.ipynb  alle_access_karteringen.ipynb  alle_karteringen_door_veg2hab.ipynb  alle_karteringen_groningen.ipynb  demo_criteria_infos.ipynb  demo_criteria_opmerkingen.ipynb  dev_non_access_karteringen.ipynb  functionality_demo.ipynb  functionality_test.ipynb  functionality_test_rVvN.ipynb  handmatig_opschonen_shapefiles.ipynb  tool_by_tool_walkthrough.ipynb  validate_single_kartering.ipynb  validation.ipynb
tests/: conftest.py  test_arcgis_parameters.py  test_combineer_karteringen.py  (+23 more)
(+89 files in other folders)
