[tool.poetry]
name = "veg2hab"
version = "0.1.0"
description = "Package voor automatisch omzetten van vegetatiekarteringen naar habitatkaarten"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
geopandas = "^0.12.0"
openpyxl = "^3.1.2"
xlrd = "^2.0.1"
pyodbc = "^5.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
