[tool.poetry]
name = "veg2hab"
version = "0.1.0"
description = "Package voor automatisch omzetten van vegetatiekarteringen naar habitatkaarten"
authors = ["Spheer.ai <info@spheer.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
geopandas = "^0.12.0"
openpyxl = "^3.1.2"
xlrd = "^2.0.1"
pyodbc= "^5.0.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"
black = "^23.12.1"
isort = "^5.13.2"
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
